@@ -21,7 +21,8 @@ cmd = [withOptions getOptions $ command "get" paramPaths seek
 	SectionCommon "make content of annexed files available"]
 
 getOptions :: [Option]
-getOptions = fromOption : autoOption : jobsOption : annexedMatchingOptions ++ keyOptions
+getOptions = fromOption : autoOption : jobsOption : annexedMatchingOptions
+	++ incompleteOption : keyOptions
 
 seek :: CommandSeek
 seek ps = do
